--- a/pages/category/index.wxss
+++ b/pages/category/index.wxss
@@ -1,1 +1,46 @@
-/* pages/category/index.wxss */
+.cate_Container {
+  display: flex;
+  height: calc(100vh - 90rpx);
+}
+.cate_Container .cate_Left {
+  flex: 1;
+}
+.cate_Container .cate_Left view {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 70rpx;
+  border-bottom: 2rpx solid #ccc;
+  padding: 5rpx;
+}
+.cate_Container .cate_Left .clickStyle {
+  color: var(--themeColor);
+  border-left: 1rpx solid var(--themeColor);
+}
+.cate_Container .cate_Right {
+  flex: 3;
+}
+.cate_Container .cate_Right .cate_block .cate_titel {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80rpx;
+  font-size: 32rpx;
+  color: black;
+  background-color: #ccc;
+}
+.cate_Container .cate_Right .cate_block .cate_list {
+  overflow: hidden;
+}
+.cate_Container .cate_Right .cate_block .cate_list navigator {
+  float: left;
+  width: 33.33%;
+  padding: 20rpx;
+}
+.cate_Container .cate_Right .cate_block .cate_list navigator text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 28rpx;
+  color: black;
+}
