--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,1 +1,52 @@
-<text class="iconfont icon-icon-test1"></text>
+<searchInput></searchInput>
+<!-- 轮播图开始 -->
+<view class="swiperContarnet">
+    <swiper indicator-dots autoplay circular>
+        <swiper-item
+        wx:for="{{swiperList}}"
+        wx:key="goods_id">
+        <image mode="widthFix" src="{{item.image_src}}" />
+        </swiper-item>
+    </swiper>
+</view>
+<!-- 轮播图结束 -->
+<!-- 分类导航栏开始 -->
+<view class="index_cate">
+    <navigator 
+    wx:for="{{cateList}}"
+    wx:key="name">
+        <image mode="widthFix" src="{{item.image_src}}"/> 
+    </navigator>
+</view>
+<!-- 导航栏开始 -->
+<!-- 商品楼层开始 -->
+<view class="index_goodsFloor">
+    <view 
+    class="goodsFloor"
+        wx:for="{{goodsList}}"
+        wx:for-index="index1"
+        wx:for-item="item1"
+        wx:key="name">
+        <view class="floorTitle">
+            <image mode="widthFix" src="{{item1.floor_title.image_src}}"/>
+        </view>
+        <view class="floorContent">
+            <navigator
+            wx:for="{{item1.product_list}}"
+            wx:for-index="index2"
+            wx:for-item="item2"
+            wx:key="name">
+                <image
+                 mode="{{index2 === 0 ? 'widthFix' : 'scaleToFill'}}"
+                 src="{{item2.image_src}}"/>
+            </navigator>
+        </view>
+    </view>
+    
+</view>
+<!-- 商品楼层结束 -->
+
+
+
+
+
